--- a/inedx.html
+++ b/inedx.html
@@ -16,6 +16,7 @@
         th {
             background-color: purple;
             color: white;
+            color: white;
         }
         .green {
             color: green;
